# snake

./: CMakeLists.txt  README.md  board.cpp  board.h  element.cpp  element.h  food.cpp  food.h  main.cpp  snake.cpp  snake.h  window.cpp  window.h  window.ui
